--- a/akarshseggemuresume/app/src/main/res/values/preloaded_fonts.xml
+++ b/akarshseggemuresume/app/src/main/res/values/preloaded_fonts.xml
@@ -2,5 +2,8 @@
 <resources>
     <array name="preloaded_fonts" translatable="false">
         <item>@font/roboto</item>
+        <item>@font/roboto_light</item>
+        <item>@font/roboto_medium</item>
+        <item>@font/roboto_thin</item>
     </array>
 </resources>
