Added if loop to check if the data is null and hide text view if null

--- a/akarshseggemuresume/app/src/main/res/layout/activity_linear_layout_publications.xml
+++ b/akarshseggemuresume/app/src/main/res/layout/activity_linear_layout_publications.xml
@@ -38,5 +38,5 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
-        android:fontFamily="@font/roboto_thin" />
+        android:fontFamily="@font/roboto_light" />
 </LinearLayout>
